2003-11-09  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC2

	* v1.4.1 Release Candidate 2

2003-11-09 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC1-b1

 	* Added number of votes to sorting order of voting.  Critique sorts 
 	  by the average votes, and this enables differentiation between 
 	  one voter giving and image 10/10 while everyone else ignores it 
 	  and 400 voter giving it 10/10.  It also means that in rank voting, 
 	  if 4 people vote an image 1/4 it will appear higher on the list 
 	  than an image that one person rates 4/4.

2003-11-08  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC1

	* v1.4.1 Release Candidate 1

	* Bumped Config. Wizard version (forgot to do it in -b216).

2003-11-08 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b217

        * Change: It seems we can use ML with PHP < 4.1.0 ; removed checks and
	  warning.

	* Change: Fixed naming of "Default" Skin to "None".

        * Language: Update German (de_DE)

2003-11-08  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-cvs-b216

	* Removed the "default" skin so we use the original files instead. Now
	  we call the default skin "none". Hopefully that's not too confusing.

	* Fixed typos in util.php and in functions.inc.
	
2003-11-07 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.1-cvs-b215

	* Changed recommended chmod value for the setup/ directory
	  to 400, to prevent insecuries with PHP/suexec.

2003-11-07 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b214

	* Fix check_versions.php so it runs on Windows box.

	* Tweaked styles for check_versions.php.

2003-11-07 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b213

	* Removed one warning and one potential warning.

2003-11-07 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b212

	* FIxed setup/check_version.php so it actually works with partially 
	  upgraded 1.4 Galleries.

2003-11-07 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b211
