@@ -11,8 +11,8 @@ $heightTL = 0;
 
 /* TT Top */
 $imageTT = "pixel_trans.gif";
-$widthTT = 0;
-$heightTT = 1;
+$widthTT = 1;
+$heightTT = 0;
 
 /* TT Top */
 $imageTTL = "pixel_trans.gif";
@@ -42,17 +42,17 @@ $heightRRB = 1;
 /* LL Left side */
 $imageLL = "pixel_trans.gif";
 $widthLL = 0;
-$heightLL = 0;
+$heightLL = 1;
 
 /* LL Left side */
 $imageLLT = "pixel_trans.gif";
 $widthLLT = 0;
-$heightLLT = 0;
+$heightLLT = 1;
 
 /* LL Left side */
 $imageLLB = "pixel_trans.gif";
 $widthLLB = 0;
-$heightLLB = 0;
+$heightLLB = 1;
 
 
 /* RR Right side */
