@@ -31,7 +31,7 @@ $versions=array();
 $versions['AUTHORS']='1.16';
 $versions['LICENSE.txt']='1.2';
 $versions['README']='1.28';
-$versions['Version.php']='1.489';
+$versions['Version.php']='1.496.2.4';
 $versions['add_comment.php']='1.26';
 $versions['add_photo.php']='1.18';
 $versions['add_photos.php']='1.49';
@@ -86,7 +86,7 @@ $versions['sort_album.php']='1.23';
 $versions['upgrade_album.php']='1.23';
 $versions['upgrade_users.php']='1.7';
 $versions['user_preferences.php']='1.29';
-$versions['util.php']='1.270';
+$versions['util.php']='1.273.2.2';
 $versions['view_album.php']='1.182';
 $versions['view_comments.php']='1.20';
 $versions['view_photo.php']='1.151';
@@ -113,12 +113,12 @@ $versions['classes/postnuke/UserDB.php']='1.8';
 $versions['classes/postnuke0.7.1/User.php']='1.5';
 $versions['classes/postnuke0.7.1/UserDB.php']='1.4';
 $versions['classes/remote/GalleryRemoteProperties.php']='1.4';
-$versions['css/config.css.default']='1.8';
-$versions['css/embedded_style.css.default']='1.3';
+$versions['css/config.css.default']='1.10';
+$versions['css/embedded_style.css.default']='1.4';
 $versions['css/standalone_style.css.default']='1.6';
 $versions['errors/configmode.php']='1.20';
 $versions['errors/configure_help.php']='1.7';
-$versions['errors/configure_instructions.php']='1.11';
+$versions['errors/configure_instructions.php']='1.12';
 $versions['errors/reconfigure.php']='1.18';
 $versions['errors/unconfigured.php']='1.18';
 $versions['html/errorRow.inc']='1.6';
@@ -148,7 +148,7 @@ $versions['html_wrap/wrapper.header.default']='1.14';
 $versions['html_wrap/frames/README.php']='1.6';
 $versions['html_wrap/frames/polaroid/frame.def']='1.7';
 $versions['html_wrap/frames/polaroids/frame.def']='1.6';
-$versions['html_wrap/frames/shadows/frame.def']='1.6';
+$versions['html_wrap/frames/shadows/frame.def']='1.6.2.1';
 $versions['html_wrap/frames/simple_book/frame.def']='1.6';
 $versions['js/client_sniff.js']='1.2';
 $versions['layout/adminbox.inc']='1.14';
@@ -160,6 +160,9 @@ $versions['layout/commentdraw.inc']='1.15';
 $versions['layout/ml_pulldown.inc']='1.41';
 $versions['layout/navigator.inc']='1.25';
 $versions['layout/navphoto.inc']='1.25';
+$versions['layout/navtablebegin.inc']='1.1';
+$versions['layout/navtableend.inc']='1.1';
+$versions['layout/navtablemiddle.inc']='1.1';
 $versions['layout/searchdraw.inc']='1.15';
 $versions['platform/fs_unix.php']='1.19';
 $versions['platform/fs_win32.php']='1.20';
@@ -169,12 +172,13 @@ $versions['setup/check.inc']='1.31';
 $versions['setup/check_imagemagick.php']='1.18';
 $versions['setup/check_mail.php']='1.3';
 $versions['setup/check_netpbm.php']='1.27';
-$versions['setup/config_data.inc']='1.156';
+$versions['setup/check_versions.php']='1.4';
+$versions['setup/config_data.inc']='1.157';
 $versions['setup/confirm.inc']='1.69';
 $versions['setup/constants.inc']='1.27';
 $versions['setup/defaults.inc']='1.19';
 $versions['setup/diagnostics.php']='1.15';
-$versions['setup/functions.inc']='1.140';
+$versions['setup/functions.inc']='1.142';
 $versions['setup/gpl.txt']='1.5';
 $versions['setup/index.php']='1.38';
 $versions['setup/init.php']='1.34';
@@ -183,5 +187,5 @@ $versions['setup/php_value.template']='1.6';
 $versions['setup/php_value_ok.php']='1.5';
 $versions['setup/phpinfo.php']='1.5';
 $versions['setup/session_test.php']='1.19';
-$versions['setup/write.inc']='1.46';
+$versions['setup/write.inc']='1.47';
 ?>
