@@ -174,6 +174,9 @@ $files=array(	"AUTHORS",
 	       	"layout/ml_pulldown.inc",
 	       	"layout/navigator.inc",
 	       	"layout/navphoto.inc",
+		"layout/navtablebegin.inc",
+		"layout/navtableend.inc",
+		"layout/navtablemiddle.inc",
 	       	"layout/searchdraw.inc",
 	       	"platform/fs_unix.php",
 	       	"platform/fs_win32.php");
@@ -184,6 +187,7 @@ $setup = array(	"setup/.htaccess",
 	       	"setup/check_imagemagick.php",
 	       	"setup/check_mail.php",
 	       	"setup/check_netpbm.php",
+	       	"setup/check_versions.php",
 	       	"setup/config_data.inc",
 	       	"setup/confirm.inc",
 	       	"setup/constants.inc",
