@@ -1,3 +1,11 @@
+2003-11-09  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC2-b1
+
+	* Fix to gettext (missing _() ) problem.
+
+	* Fix to missing pixels in shadow frame. 
+
+	* Updating of manifest.inc.
+
 2003-11-09  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC2
 
 	* v1.4.1 Release Candidate 2
